--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		<script type="text/template" id="item-template">
 			<div class="view">
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
-				<label><%- title %><%= completed ? ' -- done!' : '' %></label>
+				<!--<label><%- title %><%= completed ? ' - done!' : '' %></label>-->
+				<label><%- title %></label>
 				<button class="edit-btn"></button>
 				<button class="destroy"></button>
 			</div>
